feat(expenses): placeholder for who paid

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
     <div class="card">
       <h2>Add Expense</h2>
       <label for="payer">Who paid?</label>
-      <select id="payer"></select>
+      <select id="payer">
+        <option value="">Select a person from the list above</option>
+      </select>
 
       <label for="amount">Amount</label>
       <input id="amount" type="number" placeholder="e.g. 42" />
