--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Easy Expense Splitter</title>
     <style>
       body {
@@ -10,6 +11,12 @@
         margin: 30px auto;
         padding: 0 16px;
         background: #fafafa;
+      }
+      @media (max-width: 768px) {
+        body {
+          margin: 16px auto;
+          padding: 0 12px;
+        }
       }
       h1 {
         text-align: center;
@@ -42,9 +49,20 @@
       .row > * {
         flex: 1;
       }
+      @media (max-width: 480px) {
+        .row {
+          flex-direction: column;
+        }
+      }
       .chips label {
         display: inline-flex;
         margin: 4px 8px 4px 0;
+      }
+      @media (max-width: 480px) {
+        .chips label {
+          margin: 4px 4px 4px 0;
+          font-size: 14px;
+        }
       }
       ul {
         padding-left: 18px;
@@ -56,6 +74,12 @@
         gap: 8px;
         border-bottom: 1px solid #eee;
         padding: 8px 0;
+      }
+      @media (max-width: 480px) {
+        li {
+          flex-wrap: wrap;
+          gap: 4px;
+        }
       }
       #settlements li {
         justify-content: start;
